# gpt3-signalbot

./: .gitignore  .pre-commit-config.yaml  ReadMe.md  bot.py  env.template  pyproject.toml  setup.cfg
commands/: __init__.py  gpt3.py
contacts/: groups.py
tests/: test_gpt3.py
